tests/hm_typing/faulty_if_expressions.sy
f: fn -> * : external

start :: fn do
    if true do 1 else do 1 end

    a :: f'
    b :: "a"
    if true do (a + 1) else do b end
end

// error: $BinOp
